# project-santara

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  codecov.yml  docker-compose.yml  nx.json  package.json
.docs/: AGENTS.md  DEVELOPMENT.md
.github/workflows/: ci.yml
apps/ai-engine/: .env.example  pyproject.toml  requirements.txt
apps/ai-engine/scripts/: __init__.py  ingest_bps.py  ingest_osm.py
apps/ai-engine/src/: __init__.py  config.py  logging.py  main.py
apps/ai-engine/src/api/: __init__.py  grpc_servicer.py  rest_router.py
apps/ai-engine/src/domain/: __init__.py  repositories.py  schemas.py
apps/ai-engine/src/infrastructure/: __init__.py  cloud_llm_client.py  neo4j_client.py
apps/ai-engine/src/usecases/: __init__.py  agent_tools.py  agentic_rag.py  evaluate_sim.py  graph_pruning.py
apps/ai-engine/tests/: __init__.py  test_integration.py  test_schemas.py
apps/sim-engine/: go.mod  go.sum
apps/sim-engine/cmd/server/: main.go
apps/sim-engine/internal/adapters/inference/: grpc_client.go
apps/sim-engine/internal/adapters/state/: memory.go
apps/sim-engine/internal/app/: app.go  tick_engine.go
apps/sim-engine/internal/app/commands/: process_tick.go
apps/sim-engine/internal/app/queries/: world_state.go
apps/sim-engine/internal/domain/: agent.go  market.go  repository.go
docs/: AGENTS.md  ARCHITECTURE.md  COMMIT_STYLE.md  ROADMAP.md
docs-id/: ARCHITECTURE.md  PANDUAN.md  ROADMAP.md
docs/releases/: v0.1.0.md
libs/rpc-contracts/: README.md  simulation.proto
libs/rpc-contracts/proto/: simulation.proto
libs/rpc-contracts/python/tests/: conftest.py  test_sim_engine_integration.py
libs/sim-datasets/id_fiscal_pressure/: build.py
libs/sim-datasets/id_fiscal_pressure/raw/: santara_bapanas_konsumen.csv  santara_bi_7day_rr.csv  santara_bi_7day_rr.xlsx  santara_jisdor.csv  santara_pihps_daily.csv  santara_pihps_extension.csv
libs/sim-datasets/id_fiscal_pressure/sources/: __init__.py  _dates.py  bapanas.py  bi_rate.py  fuel.py  jisdor.py  pihps_daily.py  pihps_extension.py
libs/sim-datasets/id_fiscal_pressure/tests/: __init__.py  test_provenance.py
libs/sim-kernel/: README.md  pyproject.toml
libs/sim-kernel/src/sim_kernel/: __init__.py  a2a.py  errors.py  events.py  locales.py  mcp.py  models.py  prompts.py  telemetry.py
libs/sim-kernel/src/sim_kernel/grpc_contracts/: __init__.py
libs/sim-kernel/tests/: test_errors_locales.py  test_events.py  test_models.py  test_telemetry_mcp_a2a.py
services/sim-engine/: Dockerfile  README.md  go.mod  go.sum
services/sim-engine/cmd/server/: main.go
services/sim-engine/internal/app/: tick.go
services/sim-engine/internal/config/: config.go
services/sim-engine/internal/grpc/: server.go  server_test.go
services/sim-engine/internal/state/: memory.go
services/sim-engine/internal/telemetry/: logger.go
services/sim-gateway/: Dockerfile  README.md  pyproject.toml
services/sim-gateway/src/sim_gateway/: __init__.py  main.py
services/sim-gateway/tests/: test_main.py
services/sim-id-agraria/: README.md
services/sim-id-fiskal/: Dockerfile  README.md  pyproject.toml
services/sim-id-fiskal/src/sim_id_fiskal/: __init__.py  anchor.py  dataset.py  main.py
services/sim-id-fiskal/tests/: test_anchor.py  test_dataset.py  test_integration.py
services/sim-id-iklim/: Dockerfile  README.md  pyproject.toml
services/sim-id-iklim/src/sim_id_iklim/: __init__.py  anchor.py  main.py
services/sim-id-iklim/tests/: test_anchor.py  test_main.py
services/sim-id-politik/: Dockerfile  README.md  pyproject.toml
services/sim-id-politik/src/sim_id_politik/: __init__.py  anchor.py  main.py
services/sim-id-politik/tests/: test_anchor.py  test_main.py
