[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-kernel"
version = "0.0.0"
description = "Shared library for the Project Santara simulation platform"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "Raihan Putra Kirana", email = "maintainers@projectsantara.id"},
]
keywords = ["simulation", "agent-based-modeling", "indonesia", "a2a", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-ai>=1.0",
    "httpx>=0.27",
    "redis>=5.0",
    "asyncpg>=0.29",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]
mcp = [
    "mcp>=1.0",
]
grpc = [
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/raihanpka/project-santara"
Documentation = "https://github.com/raihanpka/project-santara/tree/main/docs"
Repository = "https://github.com/raihanpka/project-santara"
Issues = "https://github.com/raihanpka/project-santara/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sim_kernel"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=sim_kernel --cov-report=term-missing"
