[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-gateway"
version = "0.1.0"
description = "Santara gateway: A2A router, MCP server hub, JWT auth, OpenAPI documentation."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "Raihan Putra Kirana", email = "maintainers@projectsantara.id"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pyjwt>=2.8",
    "pydantic>=2.6",
    "sim-kernel",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sim_gateway"]

[tool.uv.sources]
sim-kernel = { path = "../../libs/sim-kernel", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "F401",
    "F811",
    "B011",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
