[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-id-fiskal"
version = "0.1.0"
description = "Indonesian fiscal stress test: answer fiscal and price-shock questions from real public data."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "Raihan Putra Kirana", email = "maintainers@projectsantara.id"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "sim-kernel",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sim_id_fiskal"]

[tool.uv.sources]
sim-kernel = { path = "../../libs/sim-kernel", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "F401",
    "F811",
    "B011",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
