[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-id-iklim"
version = "0.2.0"
description = "Indonesia climate emergency. Third anchor service in Project Santara."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "Raihan Putra Kirana", email = "me@raihanpk.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "sim-kernel",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sim_id_iklim"]

[tool.uv.sources]
sim-kernel = { path = "../../libs/sim-kernel", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811", "B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
